added better practices
